# PKU_CAENDesktopDigitizer

./: .gitignore  CMakeLists.txt  README.md  main.cc  note.cc  rootlogon.C
CAEN/: setup.sh
CAEN/tar/: A2818Drv-1.19-build20150826.tgz  A2818Drv-1.20-build20161118.tgz  A2818Drv-1.21-build20200203.tgz  A3818Drv-1.6.0-build20160510.tgz  A3818Drv-1.6.0_ReleaseNotes.txt  A3818Drv-1.6.4-build20210118.tgz  CAENComm-1.4.1-build20210305.tgz  CAENDigitizerLib_Lin_ReleaseNotes.txt  CAENDigitizer_2.11.0_20180212.tgz  CAENDigitizer_2.7.6_20161014.tgz  CAENDigitizer_2.7.9_20170310.tgz  CAENUSBdrvB-1.5.2.tgz  CAENUpgrader-1.6.0-build20161104.tgz  CAENUpgrader-1.6.3-build20170511.tgz  CAENUpgrader-1.7.1-build20210402.tgz  CAENVMELib-3.2.0-build20210409.tgz  DPPLib_ReleaseNotes_linux.txt  ReleaseNotes-v1.01.txt  ReleaseNotes_3.8.2_Lin.txt
DT5730Test/: README  V1730_acquire.json  V1730_trigrate.json  acquire  acquire.cc  build.sh  digitizer.cc  digitizer.hh  json.cc  json.hh  trigrate  trigrate.cc
DT5730Test/hdf2root/: Makefile  env.sh  ext_trig_traces.h5  hdf2root  hdf2root.cc  hdf2root.e  hdf2root.hh  test.root
data/: README.md
decode/: Makefile  decode  decode.cc  r2root.cc  r2root.hh
firmware/A2818_A3818/: A2818_Firmware_ReleaseNotes.txt  A3818_Firmware_ReleaseNotes.txt  a2818pcb_Rev1.0.rbf
firmware/x720/: x720_DT5790_DPP-PSD_Release_Notes.txt  x720_rev4.16_0.15_ReleaseNotes.txt
firmware/x724/: ReleaseNotes_DPP-PHA_x724_xx78x_4.11_128.34.txt  ReleaseNotes_DPP-PHA_x724_xx78x_4.11_128.36.txt  ReleaseNotes_DPP-PHA_x724_xx78x_4.15_128.36.txt  x724_4.16_0.14.cfa  x724_rev_4.16_0.14_Release_Notes.txt  x724_rev_4.17_0.15_Release_Notes.txt  x724_xx78x_DPP-PHA_rev_4.11_128.34.cfa  x724_xx78x_DPP-PHA_rev_4.11_128.36.cfa  x724_xx78x_DPP-PHA_rev_4.15_128.36.cfa
firmware/x725/: FW_rev_4.16_0.7_ReleaseNotes.txt  ReleaseNotes_DPP-PHA_x725_4.11_139.06.txt  ReleaseNotes_DPP-PHA_x725_4.15_139.08.txt  x725_DPP-PHA_4.15_139.08.cfa  x725_DPP-PSD_4.17_136.14.cfa  x725_DPP_PHA_4.11_0921_139.06_1206.cfa  x725_rev4.16_0.7.cfa
firmware/x730/: FW_BETA_rev_4.11_0.6_ReleaseNotes.txt  ReleaseNotes_DPP-PHA_x730_4.11_139.05.txt  ReleaseNotes_DPP-PHA_x730_4.11_139.06.txt  ReleaseNotes_DPP-PHA_x730_4.15_139.08.txt  Release_Notes_730PSD_4_23_136_17.txt  Release_Notes_DPP-PHA_x730_4.23_139.10.txt  Release_Notes_PHA_730S_4.23_139.136.txt  Release_Notes_PSD_730S_4.23_136.135.txt  Release_Notes_WaveFW_x730S_rev4.23_0.2.txt  Release_Notes_WaveFW_x730_4.23_0.8.txt  RevisionHistoryPSD_730_4.11_136.10.txt  RevisionHistoryPSD_730_4.11_136.11.txt  RevisionHistoryPSD_730_4.17_136.14.txt  x730_BETA_rev_4.11_0.6.cfa  x730_CONET2_STD_FW_ReleaseNotes.txt  x730_DPP-PSD_4.11_136.10.cfa  x730_DPP-PSD_4.11_136.11.cfa  x730_DPP-PSD_4.6_136.5.cfa  x730_DPP-PSD_4.6_F513_136.5_F730.cfa  x730_DPP-PSD_4.7_136.5.cfa  x730_DPP-PSD_rev_4.3_136.2.cfa  x730_DPP_PHA_4.11_0921_139.06_1206.cfa  x730_DPP_PHA_4.11_139.05.cfa  x730_DPP_PHA_4.15_139.08.cfa  x730_DPP_PHA_4.23_139.10.cfa  x730_DPP_PSD_4.17_136.14.cfa  x730_DPP_PSD_4.23_136.17.cfa  x730_rev.4.8_0.5.cfa  x730_rev4.16_0.7.cfa  x730_rev4.22_0.8.cfa  x730_rev_4.5_0.3.cfa
firmware/x742/: x742_4.13_1.01.cfa  x742_BETA_rev_4.14_1.1.cfa  x742_FW_BETA_Release_Notes.txt  x742_FW_Release_Notes_4.13_1.01.txt
firmware/x743/: V1743_VX1743_rev.4.9_2.20.rbf  x743_rev_4.9_2.20_Release_Notes.txt
firmware/x751/: RelNotes_DPP-PSD_751_32MbFLASH_4.12_132.33.txt  Release_Notes_751PSD_4.22_132.35.txt  Release_Notes_PSD_751_4.23_132.09.txt  RevisionHystory_DPP-PSD_751_4.11_132.8.txt  v1751_dt5751_n6751_DPP-ZLE_rev_4.2_133.03.cfa  x751_DPP-PSD_32Mb_rev_4.12_132.33.cfa  x751_DPP-PSD_32Mb_rev_4.22_132.35.cfa  x751_DPP-PSD_rev_4.11_132.08.cfa  x751_DPP-PSD_rev_4.23_132.09.cfa  x751_rev4.16_0.7.cfa  x751_rev4.16_0.7_ReleaseNotes.txt
include/: Analysis.hh  Board.hh  DT5730.hh  DT5730_PSD.hh  DT_PHA.hh  DT_PSD.hh  DT_Standard.hh  Global.hh  MainFrame.hh  MainLinkdef.h  ParSetTable.hh  PrintRegisters.hh
instructions/x740/: DT5740_User_Manual_Release_Notes_12.txt  N6740_User_Manual_Release_Notes_12.txt  V1740_User_Manual_Release_Notes_Rev19.txt
offline/: Makefile  ReadData.txt  main.cc  offline  offline.cc  offline.hh  test.root
parset/: Run.config
readbinary/: ReadBinary.cc  ReadBinary.hh  main.cc
src/: Analysis.cc  Board.cc  DT5730.cc  DT5730_PSD.cc  DT_PHA.cc  DT_PSD.cc  DT_Standard.cc  Global.cc  MainFrame.cc  ParSetTable.cc  PrintRegisters.cc
test/: Analysis.hh  DT_PHA.cc  DT_PHA.hh  DT_PSD.cc  DT_PSD.hh  DT_Standard.cc  MainFrame.cc  MainFrame.hh  MainLinkdef.h  Makefile  ParSetTable.hh  PrintRegisters.cc
